--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,40 @@ containers:
   memory: 256
   resources:
     memory: 256
+- name: nautbout
+  image: networktocode/nautobot-lab
+  ports:
+  - 8000
+  - 8080
+  memory: 1024
+  resources:
+    memory: 1024
+- name: rafaycontainer
+  image: gcr.io/instruqt/cloud-client:2
+  shell: /bin/bash
+  memory: 256
+  resources:
+    memory: 256
+virtualbrowsers:
+- name: vmt
+  url: https://www.google.com/
 virtualmachines:
 - name: test-autorefill
   image: debian-cloud/debian-12
-  machine_type: n1-standard-1
+  environment:
+    INSTRUQT_AUTH: abcdefg
+  memory: 4096
+  cpus: 1
+  allow_external_ingress:
+  - http
+  - https
+  - high-ports
+  nested_virtualization: true
+- name: host2
+  image: instruqt-support/test-hp
+  shell: /bin/bash
+  memory: 4096
+  cpus: 1
+  allow_external_ingress:
+  - https
+  - high-ports
